syntax = "proto3";
option go_package="github.com/pascallohrer/fillergame/api";
package fillergame;

service FillerGame {
    rpc JoinGame (JoinRequest) returns (stream BoardState);
    rpc MakeMove (MoveRequest) returns (MoveAcknowledgment);
    rpc RebuildBoard (RebuildRequest) returns (stream BoardState);
}

message JoinRequest {
    GameBoard mode = 1;
    string username = 2;
    string password_hash = 3;
}

message MoveRequest {
    string auth_token = 1;
    Color new_color = 2;
}

message RebuildRequest {
    string auth_token = 1;
}

message BoardState {
    Status status = 1;
    repeated Modifier tiles = 2;
}

message MoveAcknowledgment {}

enum GameBoard {
    SQUARE10 = 0;
}

enum Color {
    RED = 0;
    GREEN = 1;
    BLUE = 2;
    YELLOW = 3;
    CYAN = 4;
    MAGENTA = 5;
    ORANGE = 6;
    PURPLE = 7;
}

enum StatusCode {
    DEFAULT = 0;
    YOUR_TURN = 1;
    OPPONENTS_TURN = 2;
    GAME_OVER = 3;
    NOT_YOUR_TURN = 4;
    INVALID_TOKEN = 5;
    ILLEGAL_MOVE = 6;
    WAITING_FOR_PLAYERS = 7;
    UNAVAILABLE_MODE = 8;
    AUTH_TOKEN = 9;
}

message Status {
    StatusCode status_code = 1;
    string message = 2;
}

message Modifier {
    int32 tile_id = 1;
    Color new_color = 2;
}